[FIX] DataTable columnVisibility padding

--- a/app/assets/stylesheets/hera/modules/_datatables.scss
+++ b/app/assets/stylesheets/hera/modules/_datatables.scss
@@ -289,6 +289,8 @@ div.dataTables_wrapper {
       transition: color 0s;
 
       &.buttons-columnVisibility {
+        padding-left: 2.25rem;
+
         &.active {
           &::before {
             background-color: $primary;
